Added some tests + mockmock
