# API-Management/src/main/java/io/calendar/management/api/endpoints/UserApiController.java
@@ -1,11 +1,11 @@
 package io.calendar.management.api.endpoints;
 
+import com.google.common.hash.Hashing;
+import com.sun.mail.iap.Response;
 import io.calendar.management.api.UsersApi;
-import io.calendar.management.api.model.LogInUser;
-import io.calendar.management.api.model.SimpleUser;
-import io.calendar.management.api.model.User;
-import io.calendar.management.api.model.UserWithoutPassword;
+import io.calendar.management.api.model.*;
 import io.calendar.management.api.util.JwtTokenUtil;
+import io.calendar.management.api.util.SmtpUtil;
 import io.calendar.management.entities.UserEntity;
 import io.swagger.annotations.ApiParam;
 import net.minidev.json.JSONObject;
@@ -24,9 +24,13 @@ import io.calendar.management.repositories.UserRepository;
 
 import java.net.HttpCookie;
 import java.net.URI;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Optional;
+import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
+import java.text.SimpleDateFormat;
+import java.util.*;
+import java.sql.Date;
+import java.util.concurrent.TimeUnit;
+
 
 @javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2017-07-26T19:36:34.802Z")
 
@@ -39,7 +43,16 @@ public class UserApiController implements UsersApi {
     JwtTokenUtil jwtUtil;
 
     public ResponseEntity<Object> createUser(@ApiParam(value = "", required = true) @Valid @RequestBody User user) {
+        //On verifie que le mail est pas déjà pris
+        Optional<UserEntity> userRetrieved = userRepository.findById(user.getEmail());
+        if(!userRetrieved.isEmpty()){
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).build();
+        }
         UserEntity newUserEntity = toUserEntity(user);
+        newUserEntity.setPassword( Hashing.sha256()
+                .hashString(user.getPassword(), StandardCharsets.UTF_8)
+                .toString());
+        newUserEntity.setToken("");
         userRepository.save(newUserEntity);
         String email = newUserEntity.getEmail();
 
@@ -92,6 +105,10 @@ public class UserApiController implements UsersApi {
     @Override
     public ResponseEntity<Object> deleteUser(@ApiParam(value = "",required=true) @PathVariable("userId") String userId) {
         Optional<UserEntity> userRetrieved = userRepository.findById(userId);
+        String userEmail = SecurityContextHolder.getContext().getAuthentication().getName();
+        if(!userEmail.equals(userId)){
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body("User doesn't exist");
+        }
         if (userRetrieved.isPresent()) {
             userRepository.delete(userRetrieved.get());
             Optional<UserEntity> userRetrievedAfterDelete = userRepository.findById(userId);
@@ -101,7 +118,7 @@ public class UserApiController implements UsersApi {
                 return ResponseEntity.ok().body("User deleted");
             }
         } else {
-            return ResponseEntity.badRequest().body("User doesn't exist");
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("User doesn't exist");
         }
     }
 
@@ -113,17 +130,76 @@ public class UserApiController implements UsersApi {
         HttpHeaders headers = new HttpHeaders();
         headers.add("Content-Type", "application/json");
         JSONObject jsonResp = new JSONObject();
-        if((!userRetrieved.isEmpty()) && (userRetrieved.get().getPassword().equals(user.getPassword()))){
+        String passedPassword =  Hashing.sha256()
+                .hashString(user.getPassword(), StandardCharsets.UTF_8)
+                .toString();
+
+        if((!userRetrieved.isEmpty()) && (passedPassword.equals(userRetrieved.get().getPassword()))){
             token = jwtUtil.generateToken(user.getEmail());
              c = new HttpCookie("myJwt", token);
             headers.add("Set-Cookie","myJwt=" + token);
 
-            jsonResp.put("result", token);
+            jsonResp.put("token", token);
             return ResponseEntity.status(200).header(HttpHeaders.SET_COOKIE, c.toString()).body(jsonResp.toJSONString());
         }else{
             jsonResp.put("result", "No user found or credentials are wrong");
             return ResponseEntity.status(400).headers(headers).body(jsonResp.toJSONString());
         }
+    }
+
+    @Override
+    public ResponseEntity<String> getResetLink(String content) {
+        Optional<UserEntity> userRetrieved = userRepository.findById(content);
+        String token = null;
+        String linkToSend = null;
+
+        if((!userRetrieved.isEmpty())){
+            byte[] array = new byte[7];
+            new Random().nextBytes(array);
+            token = new String(array, Charset.forName("UTF-8"));
+            token = Base64.getEncoder().encodeToString(token.getBytes());
+            token = token.replace("/","");
+            token = token.replace("+", "");
+
+            userRetrieved.get().setToken(token);
+            userRetrieved.get().setTtlToken(new Date(System.currentTimeMillis()+1440*60*1000).toString());
+            userRepository.save(userRetrieved.get());
+            linkToSend = "http://localhost/api/management/users/password/" + token;
+            String contentMail = "Please send a POST request to this address with your username and your new password : " + linkToSend;
+            SmtpUtil.sendEmail(userRetrieved.get().getEmail(), contentMail);
+
+        }
+
+
+        return ResponseEntity.status(200).body("Email successfully sent");
+    }
+
+    @Override
+    public ResponseEntity<String> resetPassword(String content, @Valid LogInUser user) {
+
+        Optional<UserEntity> userRetrieved = userRepository.findById(user.getEmail());
+        if(!userRetrieved.isEmpty()){
+            SimpleDateFormat myFormat = new SimpleDateFormat("yyyy-MM-dd");
+            java.util.Date d = new java.util.Date();
+            String tmp =  myFormat.format(d);
+            try {
+                java.util.Date tmp1 = myFormat.parse(tmp);
+                java.util.Date tmp2 = myFormat.parse(userRetrieved.get().getTtlToken());
+                long diff = tmp2.getTime() - tmp1.getTime();
+                long days = TimeUnit.DAYS.convert(diff, TimeUnit.MILLISECONDS);
+                if (content.equals(userRetrieved.get().getToken()) && (days >= 0)) {
+                    userRetrieved.get().setPassword( Hashing.sha256()
+                            .hashString(user.getPassword(), StandardCharsets.UTF_8)
+                            .toString());
+                    userRetrieved.get().setToken("");
+                    userRepository.save(userRetrieved.get());
+                    return ResponseEntity.status(200).body("Password changed");
+                }
+            }catch (Exception e){
+                e.printStackTrace();
+            }
+        }
+        return ResponseEntity.status(500).body("Internal server errorr");
     }
 
     private UserEntity toUserEntity(User user) {
